--- a/Distributed/Spark-3.html
+++ b/Distributed/Spark-3.html
@@ -356,7 +356,16 @@ penguins_df = penguins_df.withColumn('year', penguins_df.year.cast(IntegerType()
     <br/>
     <div id="src-outer-div-1">
       <div class="gen-src-body">
-<pre>penguins_df_min = penguins_df_filtered.groupby('species', 'island', 'sex').min().orderBy('species', 'island', 'sex')</pre>
+<pre>from pyspark.sql.functions import min
+
+min_list = [
+  min('bill_length_mm').alias('min_bill_length_mm'),
+  min('bill_depth_mm').alias('min_bill_depth_mm'),
+  min('flipper_length_mm').alias('min_flipper_length_mm'),
+  min('body_mass_g').alias('min_body_mass_g')
+]
+
+penguins_df_min = penguins_df_filtered.groupby('species', 'island', 'sex').agg(*min_list).orderBy('species', 'island', 'sex')</pre>
       </div>
     </div>
     <br/>
@@ -388,7 +397,16 @@ penguins_df = penguins_df.withColumn('year', penguins_df.year.cast(IntegerType()
     <br/>
     <div id="src-outer-div-1">
       <div class="gen-src-body">
-<pre>penguins_df_max = penguins_df_filtered.groupby('species', 'island', 'sex').max().orderBy('species', 'island', 'sex')</pre>
+<pre>from pyspark.sql.functions import max
+
+max_list = [
+  max('bill_length_mm').alias('max_bill_length_mm'),
+  max('bill_depth_mm').alias('max_bill_depth_mm'),
+  max('flipper_length_mm').alias('max_flipper_length_mm'),
+  max('body_mass_g').alias('max_body_mass_g')
+]
+
+penguins_df_max = penguins_df_filtered.groupby('species', 'island', 'sex').agg(*max_list).orderBy('species', 'island', 'sex')</pre>
       </div>
     </div>
     <br/>
@@ -441,17 +459,17 @@ def fix_missing_values(df_na, df_min, df_max):
     # Find the minimum values for a female of the specific species and island
     f_min = df_min.where((df_min.species == species) & (df_min.island == island) & (df_min.sex == 'female'))
     f_min = f_min.collect()[0]
-    min_b_len = f_min['min(bill_length_mm)']
-    min_b_dep = f_min['min(bill_depth_mm)']
-    min_f_len = f_min['min(flipper_length_mm)']
-    min_b_mas = f_min['min(body_mass_g)']
+    min_b_len = f_min['min_bill_length_mm']
+    min_b_dep = f_min['min_bill_depth_mm']
+    min_f_len = f_min['min_flipper_length_mm']
+    min_b_mas = f_min['min_body_mass_g']
     # Find the maximum values for a female of the specific species and island
     f_max = df_max.where((df_max.species == species) & (df_max.island == island) & (df_max.sex == 'female'))
     f_max = f_max.collect()[0]
-    max_b_len = f_max['max(bill_length_mm)']
-    max_b_dep = f_max['max(bill_depth_mm)']
-    max_f_len = f_max['max(flipper_length_mm)']
-    max_b_mas = f_max['max(body_mass_g)']
+    max_b_len = f_max['max_bill_length_mm']
+    max_b_dep = f_max['max_bill_depth_mm']
+    max_f_len = f_max['max_flipper_length_mm']
+    max_b_mas = f_max['max_body_mass_g']
     # If the features are within the range of the minimum and maximum values, then it is a female. Else, it is a male.
     if (b_len &gt;= min_b_len) and (b_len &lt;= max_b_len) \
       and (b_dep &gt;= min_b_dep) and (b_dep &lt;= max_b_dep) \
