--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>12/06/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-4.html"><span class="bold">Apache
+            Spark 4.x Quick Notes :: Part - 4</span></a></p>
+        </li>
+        <li>
           <p>11/30/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-3.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 3</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>09/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/Python-uv.html"><span class="bold">Python uv
             Tool</span></a></p>
-        </li>
-        <li>
-          <p>08/31/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/ContextManager.html"><span class="bold">Primer
-            on Python Context Manager</span></a></p>
         </li>
       </ul>
     </div>
@@ -433,6 +433,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>12/06/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-4.html"><span class="bold">Apache
+            Spark 4.x Quick Notes :: Part - 4</span></a></p>
+        </li>
         <li>
           <p>11/30/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-3.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 3</span></a></p>
