Cloud, Garage S3, Index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>12/07/2025 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Garage.html"><span class="bold">Hands-on with
+            Garage</span></a></p>
+        </li>
+        <li>
           <p>12/06/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-4.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 4</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>10/05/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/FastAPI.html"><span class="bold">Quick Primer
             on FastAPI</span></a></p>
-        </li>
-        <li>
-          <p>09/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/Python-uv.html"><span class="bold">Python uv
-            Tool</span></a></p>
         </li>
       </ul>
     </div>
@@ -254,6 +254,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>12/07/2025 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Garage.html"><span class="bold">Hands-on with
+            Garage</span></a></p>
+        </li>
+        <li>
           <p>03/12/2023 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Terraform.html"><span class="bold">Introduction
             to Terraform</span></a></p>
         </li>
@@ -262,7 +266,7 @@
             Kubernetes Storage</span></a></p>
         </li>
         <li>
-          <p>10/29/2022 | <a target="_blank" href="https://polarsparc.github.io/MinIO/MinIO.html"><span class="bold">Hands-on with
+          <p>10/29/2022 | <a target="_blank" href="https://polarsparc.github.io/Cloud/MinIO.html"><span class="bold">Hands-on with
             MinIO</span></a></p>
         </li>
         <li>
