--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>12/12/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-5.html"><span class="bold">Apache
+            Spark 4.x Quick Notes :: Part - 5</span></a></p>
+        </li>
+        <li>
           <p>12/07/2025 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Garage.html"><span class="bold">Hands-on with
             Garage</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>11/08/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
             on Ollama</span></a></p>
-        </li>
-        <li>
-          <p>10/05/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/FastAPI.html"><span class="bold">Quick Primer
-            on FastAPI</span></a></p>
         </li>
       </ul>
     </div>
@@ -437,6 +437,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>12/12/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-5.html"><span class="bold">Apache
+            Spark 4.x Quick Notes :: Part - 5</span></a></p>
+        </li>
         <li>
           <p>12/06/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-4.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 4</span></a></p>
