--- a/Distributed/Spark-5.html
+++ b/Distributed/Spark-5.html
@@ -177,6 +177,12 @@ hadoop-client-runtime-3.4.1.jar</pre>
         3.4.1</span>.</p>
       <p>Also, googling around in the web, we find that the compatible AWS V2 SDK version is <span class="hi-grey">2.29.52</span>.</p>
     </div>
+    <br/>
+    <div id="warn-div">
+      <h4>!!! ATTENTION !!!</h4>
+      <pre>If we do <span class="underbold">NOT</span> pick the right version of Hadoop and the corresponding compatible version of AWS V2 SDK, we will encounter <span class="underbold">ClassNotFound</span> issues !!!</pre>
+    </div>
+    <br/>
     <div id="para-div">
       <p>To add the missing jar(s), we will have to modify the contents of the <span class="bold">dockerfile</span> that we created
         in <a href="https://polarsparc.github.io/Distributed/Spark-1.html" target="_blank"><span class="bold">Part-1</span></a> with
@@ -314,6 +320,12 @@ spark.hadoop.fs.s3a.ssl.enabled                 false
 spark.hadoop.fs.s3a.path.style.access           true
 spark.hadoop.fs.s3a.aws.credentials.provider    org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider</pre>
       </div>
+    </div>
+    <br/>
+    <br/>
+    <div id="warn-div">
+      <h4>!!! ATTENTION !!!</h4>
+      <pre>If we do <span class="underbold">NOT</span> set the AWS Region parameter <span class="underbold">spark.hadoop.fs.s3a.endpoint.region</span>, we will encounter connection issues !!!</pre>
     </div>
     <br/>
     <div id="para-div">
