Updated MCP, Index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model
+            Context Protocol (MCP)</span></a></p>
+        </li>
+        <li>
           <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer
             on Llama.cpp</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>11/11/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
             Test :: Using Qwen-Image an Qwen-Image-Edit on a Local Machine</span></a></p>
-        </li>
-        <li>
-          <p>11/09/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer
-            on LangChain</span></a></p>
         </li>
       </ul>
     </div>
@@ -629,6 +629,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model
+            Context Protocol (MCP)</span></a></p>
+        </li>
         <li>
           <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer
             on Llama.cpp</span></a></p>
@@ -1262,8 +1266,8 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p>08/16/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on
-            Model Context Protocol (MCP)</span></a></p>
+          <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model
+            Context Protocol (MCP)</span></a></p>
         </li>
       </ul>
     </div>
