--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>12/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Docker/DockerSock.html"><span class="bold">Short Primer
+            on Docker Socket</span></a></p>
+        </li>
+        <li>
           <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model
             Context Protocol (MCP)</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>11/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common
             LangChain Recipes</span></a></p>
-        </li>
-        <li>
-          <p>11/11/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
-            Test :: Using Qwen-Image an Qwen-Image-Edit on a Local Machine</span></a></p>
         </li>
       </ul>
     </div>
@@ -505,6 +505,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>12/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Docker/DockerSock.html"><span class="bold">Short Primer
+            on Docker Socket</span></a></p>
+        </li>
         <li>
           <p>07/05/2025 | <a target="_blank" href="https://polarsparc.github.io/Docker/DockerModel.html"><span class="bold">Quick Bytes
             on Docker Model Runner</span></a></p>
