Docker Image Tags, Index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>12/28/2025 | <a target="_blank" href="https://polarsparc.github.io/Tips/DockerImageTags.html"><span class="bold">List
+            Docker Image Tags (from Hosted Registries)</span></a></p>
+        </li>
+        <li>
           <p>12/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Docker/DockerSock.html"><span class="bold">Short Primer
             on Docker Socket</span></a></p>
         </li>
@@ -1614,6 +1618,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>12/28/2025 | <a target="_blank" href="https://polarsparc.github.io/Tips/DockerImageTags.html"><span class="bold">List
+            Docker Image Tags (from Hosted Registries)</span></a></p>
+        </li>
         <li>
           <p>01/25/2025 | <a target="_blank" href="https://polarsparc.github.io/Tips/JetBrains.html"><span class="bold">JetBrains IDE
             Markdown Appears Blank</span></a></p>
