ESP32, IoT, Index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>12/29/2025 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-1.html"><span class="bold">ESP32 30-Pin
+            DevKit Basics, Setup, and Test</span></a></p>
+        </li>
+        <li>
           <p>12/28/2025 | <a target="_blank" href="https://polarsparc.github.io/Tips/DockerImageTags.html"><span class="bold">List
             Docker Image Tags (from Hosted Registries)</span></a></p>
         </li>
@@ -73,10 +77,6 @@
         <li>
           <p>11/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-1.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 1</span></a></p>
-        </li>
-        <li>
-          <p>11/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common
-            LangChain Recipes</span></a></p>
         </li>
       </ul>
     </div>
@@ -856,6 +856,18 @@
         <li>
           <p>09/18/2022 | <a target="_blank" href="https://polarsparc.github.io/HyperledgerFabric/Hyperledger-ARM-Build.html"><span
             class="bold">Building Docker Images for Hyperledger Fabric 2.x (ARM64 Edition)</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>IoT</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p>12/29/2025 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-1.html"><span class="bold">ESP32 30-Pin
+            DevKit Basics, Setup, and Test</span></a></p>
         </li>
       </ul>
     </div>
