--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>01/01/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain4J.html"><span class="bold">Hands-on
+            LangChain4J</span></a></p>
+        </li>
+        <li>
           <p>12/29/2025 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-1.html"><span class="bold">ESP32 30-Pin
             DevKit Basics, Setup, and Test</span></a></p>
         </li>
@@ -73,10 +77,6 @@
         <li>
           <p>11/28/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-2.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 2</span></a></p>
-        </li>
-        <li>
-          <p>11/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-1.html"><span class="bold">Apache
-            Spark 4.x Quick Notes :: Part - 1</span></a></p>
         </li>
       </ul>
     </div>
@@ -638,6 +638,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>01/01/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain4J.html"><span class="bold">Hands-on
+            LangChain4J</span></a></p>
+        </li>
+        <li>
           <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model
             Context Protocol (MCP)</span></a></p>
         </li>
@@ -660,6 +664,10 @@
         <li>
           <p>11/08/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
             on Ollama</span></a></p>
+        </li>
+        <li>
+          <p>06/21/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/PragmaticSpringAI.html"><span class="bold">
+            Pragmatic Bytes on Spring AI</span></a></p>
         </li>
         <li>
           <p>05/31/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/OpenWebUI.html"><span class="bold">Quick Primer
@@ -1545,18 +1553,6 @@
         <li>
           <p>05/03/2009 | <a target="_blank" href="https://polarsparc.github.io/Security/GPG.html"><span class="bold">Secure Data
             Communications Using GNU Privacy Guard (GPG)</span></a></p>
-        </li>
-      </ul>
-    </div>
-    <div id="step-div">
-      <p>SpringAI</p>
-    </div>
-    <br/>
-    <div id="para-div">
-      <ul id="blue-sqr-ul">
-        <li>
-          <p>06/21/2025 | <a target="_blank" href="https://polarsparc.github.io/SpringAI/PragmaticSpringAI.html"><span class="bold">
-            Pragmatic Bytes on Spring AI</span></a></p>
         </li>
       </ul>
     </div>
