--- a/GenAI/PragmaticSpringAI.html
+++ b/GenAI/PragmaticSpringAI.html
@@ -71,7 +71,7 @@
         "http://polarsparc.github.io/GenAI/Ollama.html" target="_blank"><span class="bold">instructions</span></a>).</p>
     </div>
     <div id="para-div">
-      <p>Further, ensure at least <span class="bold">Java 17</span> or above is installed and setup. In addition, ensure <a href=
+      <p>Further, ensure at least <span class="bold">Java 21</span> or above is installed and setup. In addition, ensure <a href=
         "http://maven.apache.org/" target="_blank"><span class="hi-yellow">Apache Maven</span></a> is installed and setup.</p>
       <p>We will use <span class="bold">Spring AI</span></a> with <span class="bold">Spring Boot</span> for all the demonstrations in
         this article.</p>
@@ -139,7 +139,7 @@
     </div>
     <br/>
     <div id="cmd-div">
-      <p>$ docker run --rm --name pgvector -e POSTGRES_DB=ps_vector -e POSTGRES_USER=pgusr -e POSTGRES_PASSWORD=pgusr\$123 -p 5432:5432 -v /tmp/pgvector:/var/lib/postgresql/18/data pgvector/pgvector:pg18</p>
+      <p>$ docker run --rm --name pgvector -e POSTGRES_DB=ps_vector -e POSTGRES_USER=pgusr -e POSTGRES_PASSWORD=pgusr\$123 -p 5432:5432 -v /tmp/pgvector:/var/lib/postgresql pgvector/pgvector:pg18</p>
     </div>
     <br/>
     <div id="para-div">
