DHT22 with ESP32, Index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>01/02/2026 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-2.html"><span class="bold">DHT22 Sensor
+            with ESP32 - Setup and Test</span></a></p>
+        </li>
+        <li>
           <p>01/01/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain4J.html"><span class="bold">Hands-on
             LangChain4J</span></a></p>
         </li>
@@ -73,10 +77,6 @@
         <li>
           <p>12/06/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-4.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 4</span></a></p>
-        </li>
-        <li>
-          <p>11/30/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-3.html"><span class="bold">Apache
-            Spark 4.x Quick Notes :: Part - 3</span></a></p>
         </li>
       </ul>
     </div>
@@ -873,6 +873,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>01/02/2026 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-2.html"><span class="bold">DHT22 Sensor
+            with ESP32 - Setup and Test</span></a></p>
+        </li>
         <li>
           <p>12/29/2025 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-1.html"><span class="bold">ESP32 30-Pin
             DevKit Basics, Setup, and Test</span></a></p>
