Index, LangChain4J fix, SpringAI MCP

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>01/10/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/McpSpringAI.html"><span class="bold">Hands-on MCP
+            using Spring AI</span></a></p>
+        </li>
+        <li>
           <p>01/02/2026 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-2.html"><span class="bold">DHT22 Sensor
             with ESP32 - Setup and Test</span></a></p>
         </li>
@@ -73,10 +77,6 @@
         <li>
           <p>12/07/2025 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Garage.html"><span class="bold">Hands-on with
             Garage</span></a></p>
-        </li>
-        <li>
-          <p>12/06/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-4.html"><span class="bold">Apache
-            Spark 4.x Quick Notes :: Part - 4</span></a></p>
         </li>
       </ul>
     </div>
@@ -637,6 +637,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>01/10/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/McpSpringAI.html"><span class="bold">Hands-on MCP
+            using Spring AI</span></a></p>
+        </li>
         <li>
           <p>01/01/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain4J.html"><span class="bold">Hands-on
             LangChain4J</span></a></p>
@@ -1297,6 +1301,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>01/10/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/McpSpringAI.html"><span class="bold">Hands-on MCP
+            using Spring AI</span></a></p>
+        </li>
         <li>
           <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model
             Context Protocol (MCP)</span></a></p>
