Fix Spring AI MCP

--- a/MCP/McpSpringAI.html
+++ b/MCP/McpSpringAI.html
@@ -875,6 +875,10 @@ public class InterestMcpClientApplication {
       <p><span class="bold">BINGO</span> !!! With this, we conclude the hands-on demonstration of the <span class="bold">MCP</span>
         server and the client using <span class="bold">Spring AI</span> !!!</p>
     </div>
+    <div id="para-div">
+      <p>The code repository for this article can be found <a href="https://github.com/bhaskars-repo/SpringAIMCP" target="_blank">
+        <span class="bold">HERE</span></a> !!!</p>
+    </div>
     <br/>
     <div id="section-div">
       <p>References</p>
