Index, Raspberry Pi Imager

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>01/16/2026 | <a target="_blank" href="https://polarsparc.github.io/General/RPi-Imager.html"><span class="bold">Using
+            Raspberry Pi Imager</span></a></p>
+        </li>
+        <li>
           <p>01/10/2026 | <a target="_blank" href="https://polarsparc.github.io/MCP/McpSpringAI.html"><span class="bold">Hands-on MCP
             using Spring AI</span></a></p>
         </li>
@@ -73,10 +77,6 @@
         <li>
           <p>12/12/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-5.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 5</span></a></p>
-        </li>
-        <li>
-          <p>12/07/2025 | <a target="_blank" href="https://polarsparc.github.io/Cloud/Garage.html"><span class="bold">Hands-on with
-            Garage</span></a></p>
         </li>
       </ul>
     </div>
@@ -709,6 +709,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>01/16/2026 | <a target="_blank" href="https://polarsparc.github.io/General/RPi-Imager.html"><span class="bold">Using
+            Raspberry Pi Imager</span></a></p>
+        </li>
         <li>
           <p>03/14/2025 | <a target="_blank" href="https://polarsparc.github.io/General/RPi-5-Ollama.html"><span class="bold">Pi Day
             Special - Ollama on Raspberry Pi 5</span></a></p>
