--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>01/17/2026 | <a target="_blank" href="https://polarsparc.github.io/General/Pi-AdGuard.html"><span class="bold">AdGuard
+            on Raspberry Pi</span></a></p>
+        </li>
+        <li>
           <p>01/16/2026 | <a target="_blank" href="https://polarsparc.github.io/General/RPi-Imager.html"><span class="bold">Using
             Raspberry Pi Imager</span></a></p>
         </li>
@@ -73,10 +77,6 @@
         <li>
           <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer
             on Llama.cpp</span></a></p>
-        </li>
-        <li>
-          <p>12/12/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-5.html"><span class="bold">Apache
-            Spark 4.x Quick Notes :: Part - 5</span></a></p>
         </li>
       </ul>
     </div>
@@ -709,6 +709,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>01/17/2026 | <a target="_blank" href="https://polarsparc.github.io/General/Pi-AdGuard.html"><span class="bold">AdGuard
+            on Raspberry Pi</span></a></p>
+        </li>
         <li>
           <p>01/16/2026 | <a target="_blank" href="https://polarsparc.github.io/General/RPi-Imager.html"><span class="bold">Using
             Raspberry Pi Imager</span></a></p>
