Index, Linux Veth

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>01/24/2026 | <a target="_blank" href="https://polarsparc.github.io/Linux/LinuxVeth.html"><span class="bold">Hands-on Linux
+            Virtual Ethernet (Veth)</span></a></p>
+        </li>
+        <li>
           <p>01/17/2026 | <a target="_blank" href="https://polarsparc.github.io/General/Pi-AdGuard.html"><span class="bold">AdGuard
             on Raspberry Pi</span></a></p>
         </li>
@@ -73,10 +77,6 @@
         <li>
           <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model
             Context Protocol (MCP)</span></a></p>
-        </li>
-        <li>
-          <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer
-            on Llama.cpp</span></a></p>
         </li>
       </ul>
     </div>
@@ -1037,6 +1037,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>01/24/2026 | <a target="_blank" href="https://polarsparc.github.io/Linux/LinuxVeth.html"><span class="bold">Hands-on Linux
+            Virtual Ethernet (Veth)</span></a></p>
+        </li>
         <li>
           <p>01/07/2023 | <a target="_blank" href="https://polarsparc.github.io/Linux/IntroToWSL2.html"><span class="bold">Introduction
             to WSL 2</span></a></p>
