--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>01/31/2026 | <a target="_blank" href="https://polarsparc.github.io/Linux/FirecrackerMicroVM.html"><span class="bold">Hands-on
+            Firecracker MicroVM</span></a></p>
+        </li>
+        <li>
           <p>01/24/2026 | <a target="_blank" href="https://polarsparc.github.io/Linux/LinuxVeth.html"><span class="bold">Hands-on Linux
             Virtual Ethernet (Veth)</span></a></p>
         </li>
@@ -73,10 +77,6 @@
         <li>
           <p>12/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Docker/DockerSock.html"><span class="bold">Short Primer
             on Docker Socket</span></a></p>
-        </li>
-        <li>
-          <p>12/26/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on Model
-            Context Protocol (MCP)</span></a></p>
         </li>
       </ul>
     </div>
@@ -1037,6 +1037,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>01/31/2026 | <a target="_blank" href="https://polarsparc.github.io/Linux/FirecrackerMicroVM.html"><span class="bold">Hands-on
+            Firecracker MicroVM</span></a></p>
+        </li>
         <li>
           <p>01/24/2026 | <a target="_blank" href="https://polarsparc.github.io/Linux/LinuxVeth.html"><span class="bold">Hands-on Linux
             Virtual Ethernet (Veth)</span></a></p>
