GLM-4.7, Langchain fix, Ollama update, Index

--- a/GenAI/LangChain.html
+++ b/GenAI/LangChain.html
@@ -178,7 +178,7 @@
     </div>
     <br/>
     <div id="cmd-div">
-      <p>$ pip install chromadb dotenv langchain lanchain-chroma lanchain-core langchain-community langchain-ollama</p>
+      <p>$ pip install chromadb dotenv langchain langchain-chroma langchain-core langchain-community langchain-ollama</p>
     </div>
     <br/>
     <div id="para-div">
