--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>02/01/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Eval-GLM-4.7.html"><span class="bold">Evaluation
+            :: LLM Thinking & Tooling using GLM-4.7-Flash</span></a></p>
+        </li>
+        <li>
+          <p>01/31/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
+            on Ollama</span></a></p>
+        </li>
+        <li>
           <p>01/31/2026 | <a target="_blank" href="https://polarsparc.github.io/Linux/FirecrackerMicroVM.html"><span class="bold">Hands-on
             Firecracker MicroVM</span></a></p>
         </li>
@@ -65,18 +73,6 @@
         <li>
           <p>01/01/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/PragmaticSpringAI.html"><span class="bold">
             Pragmatic Bytes on Spring AI</span></a></p>
-        </li>
-        <li>
-          <p>12/29/2025 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-1.html"><span class="bold">ESP32 30-Pin
-            DevKit Basics, Setup, and Test</span></a></p>
-        </li>
-        <li>
-          <p>12/28/2025 | <a target="_blank" href="https://polarsparc.github.io/Tips/DockerImageTags.html"><span class="bold">List
-            Docker Image Tags (from Hosted Registries)</span></a></p>
-        </li>
-        <li>
-          <p>12/27/2025 | <a target="_blank" href="https://polarsparc.github.io/Docker/DockerSock.html"><span class="bold">Short Primer
-            on Docker Socket</span></a></p>
         </li>
       </ul>
     </div>
@@ -638,7 +634,15 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p>01/10/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/McpSpringAI.html"><span class="bold">Hands-on MCP
+          <p>02/01/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Eval-GLM-4.7.html"><span class="bold">Evaluation
+            :: LLM Thinking & Tooling using GLM-4.7-Flash</span></a></p>
+        </li>
+        <li>
+          <p>01/31/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
+            on Ollama</span></a></p>
+        </li>
+        <li>
+          <p>01/10/2026 | <a target="_blank" href="https://polarsparc.github.io/MCP/McpSpringAI.html"><span class="bold">Hands-on MCP
             using Spring AI</span></a></p>
         </li>
         <li>
@@ -668,10 +672,6 @@
         <li>
           <p>11/09/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer
             on LangChain</span></a></p>
-        </li>
-        <li>
-          <p>11/08/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer
-            on Ollama</span></a></p>
         </li>
         <li>
           <p>05/31/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/OpenWebUI.html"><span class="bold">Quick Primer
