Docker Model, Index

--- a/Docker/DockerModel.html
+++ b/Docker/DockerModel.html
@@ -28,7 +28,7 @@
       <tbody>
         <tr>
           <td class="author-td">Bhaskar S</td>
-          <td class="date-td">07/05/2025</td>
+          <td class="date-td"><span class="hi-yellow">*UPDATED*</span>02/01/2026</td>
         </tr>
       </tbody>
     </table>
@@ -135,19 +135,19 @@
     <br/>
     <div id="out-div">
       <h4>Output.1</h4>
-<pre>Client:
- Version:    27.5.1
+<pre>Client: Docker Engine - Community
+ Version:    29.2.0
  Context:    default
  Debug Mode: false
  Plugins:
   buildx: Docker Buildx (Docker Inc.)
-    Version:  0.20.1
+    Version:  v0.31.1
     Path:     /usr/libexec/docker/cli-plugins/docker-buildx
   compose: Docker Compose (Docker Inc.)
-    Version:  2.33.0+ds1-0ubuntu1~24.04.1
+    Version:  2.37.1+ds1-0ubuntu2~24.04.1
     Path:     /usr/libexec/docker/cli-plugins/docker-compose
-  model: Docker Model Runner (EXPERIMENTAL) (Docker Inc.)
-    Version:  v0.1.32
+  model: Docker Model Runner (Docker Inc.)
+    Version:  v1.0.9
     Path:     /usr/libexec/docker/cli-plugins/docker-model
 .....[TRIM].....</pre>
     </div>
@@ -175,7 +175,7 @@
     <br/>
     <div id="out-div">
       <h4>Output.2</h4>
-      <pre>Docker Model Runner version v0.1.32
+      <pre>Docker Model Runner version v1.0.9
 Docker Engine Kind: Docker Engine</pre>
     </div>
     <br/>
@@ -196,31 +196,31 @@ Docker Engine Kind: Docker Engine</pre>
       <h4>Output.3</h4>
       <pre>Usage:  docker model COMMAND
 
-Docker Model Runner (EXPERIMENTAL)
-
-EXPERIMENTAL:
-  docker model is an experimental feature.
-  Experimental features provide early access to product functionality. These
-  features may change between releases without warning, or can be removed from a
-  future release. Learn more about experimental features in our documentation:
-  https://docs.docker.com/go/experimental/
+Docker Model Runner
 
 Commands:
-  configure        Configure runtime options for a model
+  bench            Benchmark a model's performance at different concurrency levels
   df               Show Docker Model Runner disk usage
   inspect          Display detailed information on one model
   install-runner   Install Docker Model Runner (Docker Engine only)
   list             List the models pulled to your local environment
   logs             Fetch the Docker Model Runner logs
-  package          Package a GGUF file into a Docker model OCI artifact, with optional licenses, and pushes it to the specified registry
+  package          Package a GGUF file, Safetensors directory, DDUF file, or existing model into a Docker model OCI artifact.
   ps               List running models
   pull             Pull a model from Docker Hub or HuggingFace to your local environment
+  purge            Remove all models
   push             Push a model to Docker Hub
+  reinstall-runner Reinstall Docker Model Runner (Docker Engine only)
+  requests         Fetch requests+responses from Docker Model Runner
+  restart-runner   Restart Docker Model Runner (Docker Engine only)
   rm               Remove local models downloaded from Docker Hub
   run              Run a model and interact with it using a submitted prompt or chat mode
+  search           Search for models on Docker Hub and HuggingFace
+  start-runner     Start Docker Model Runner (Docker Engine only)
   status           Check if the Docker Model Runner is running
+  stop-runner      Stop Docker Model Runner (Docker Engine only)
   tag              Tag a model
-  uninstall-runner Uninstall Docker Model Runner
+  uninstall-runner Uninstall Docker Model Runner (Docker Engine only)
   unload           Unload running models
   version          Show the Docker Model Runner version
 
@@ -241,7 +241,22 @@ Run 'docker model COMMAND --help' for more information on a command.</pre>
     <br/>
     <div id="out-div">
       <h4>Output.4</h4>
-      <pre>MODEL NAME  PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID  CREATED  SIZE</pre>
+      <pre>latest: Pulling from docker/model-runner
+f784408d7713: Pull complete 
+ed3b61b56cf4: Pull complete 
+027c5e81f27e: Pull complete 
+d70c5952b45f: Pull complete 
+e06a12754a26: Pull complete 
+a77e4ee68446: Pull complete 
+b9b9c5dd5c4b: Pull complete 
+1ff8feaee46b: Pull complete 
+ff8244fefab4: Pull complete 
+Digest: sha256:795efebeaf009009ccc9d4ee5671969fed8de46559062f6816ed53e0efe3b6bf
+Status: Downloaded newer image for docker/model-runner:latest
+Successfully pulled docker/model-runner:latest
+Creating model storage volume docker-model-runner-models...
+Starting model runner container docker-model-runner...
+MODEL NAME  PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID  CREATED  CONTEXT  SIZE</pre>
     </div>
     <br/>
     <div id="para-div">
@@ -270,7 +285,8 @@ Run 'docker model COMMAND --help' for more information on a command.</pre>
     <br/>
     <div id="out-div">
       <h4>Output.5</h4>
-      <pre>Downloaded: 8300.00 MB
+      <pre>c2b52d60a238: Pull complete [==================================================>]  8.344kB/8.344kB
+96c32662a056: Pull complete [==================================================>]  8.919GB/8.919GB
 Model pulled successfully</pre>
     </div>
     <br/>
@@ -288,8 +304,8 @@ Model pulled successfully</pre>
     <br/>
     <div id="out-div">
       <h4>Output.6</h4>
-      <pre>MODEL NAME         PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID      CREATED     SIZE     
-ai/gemma3n:2B-F16  4.46 B      F16           gemma3n       f45ebd23a7bf  8 days ago  8.30 GiB</pre>
+      <pre>MODEL NAME      PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID      CREATED       CONTEXT  SIZE      
+gemma3n:2B-F16  4.46 B      F16           gemma3n       f45ebd23a7bf  7 months ago           8.30 GiB </pre>
     </div>
     <br/>
     <div id="para-div">
@@ -306,8 +322,7 @@ ai/gemma3n:2B-F16  4.46 B      F16           gemma3n       f45ebd23a7bf  8 days 
     <br/>
     <div id="out-div">
       <h4>Output.7</h4>
-      <pre>Interactive chat mode started. Type '/bye' to exit.
-&gt;</pre>
+      <pre>&gt; Send a message (/? for help)</pre>
     </div>
     <br/>
     <div id="para-div">
@@ -379,7 +394,7 @@ I hope this helps! Let me know if you have any other questions.</pre>
     <div id="out-div">
       <h4>Output.9</h4>
       <pre>CONTAINER ID   IMAGE                        COMMAND               CREATED         STATUS         PORTS                                                     NAMES
-97a401e9d1e1   docker/model-runner:latest   "/app/model-runner"   6 minutes ago   Up 6 minutes   127.0.0.1:12434->12434/tcp, 172.17.0.1:12434->12434/tcp   docker-model-runner</pre>
+bff97003bde0   docker/model-runner:latest   "/app/model-runner"   7 minutes ago   Up 7 minutes   127.0.0.1:12434->12434/tcp, 172.17.0.1:12434->12434/tcp   docker-model-runner</pre>
     </div>
     <br/>
     <div id="para-div">
@@ -567,7 +582,8 @@ I hope this helps! Let me know if you have any other questions.</pre>
     <br/>
     <div id="out-div">
       <h4>Output.13</h4>
-      <pre>Model sha256:f45ebd23a7bfc435bfbdac2f39fc1e798644ba40c8dd4dadcad284fd99230d32 removed successfully</pre>
+      <pre>Untagged: docker.io/ai/gemma3n:2B-F16
+Deleted: sha256:f45ebd23a7bfc435bfbdac2f39fc1e798644ba40c8dd4dadcad284fd99230d32</pre>
     </div>
     <br/>
     <div id="para-div">
