--- a/Docker/DockerModel.html
+++ b/Docker/DockerModel.html
@@ -236,7 +236,7 @@ Run 'docker model COMMAND --help' for more information on a command.</pre>
     </div>
     <br/>
     <div id="para-div">
-      <p>The following would be a typical output:</p>
+      <p>If the local host does <span class="underbold">NOT</span> have NVidia GPU, the following would be a typical output:</p>
     </div>
     <br/>
     <div id="out-div">
@@ -260,7 +260,41 @@ MODEL NAME  PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID  CREATED  CONTEXT  
     </div>
     <br/>
     <div id="para-div">
-      <p>As is evident from the Output.4 above, there are no AI models currently downloaded on the local host.</p>
+      <p>However, if the local host does <span class="underbold">HAVE</span> a NVidia GPU, the following would be a typical output:</p>
+    </div>
+    <br/>
+    <div id="out-div">
+      <h4>Output.5</h4>
+      <pre>latest-cuda: Pulling from docker/model-runner
+0622fac788ed: Already exists 
+2b2da1c48640: Already exists 
+b2276ea4fcfd: Already exists 
+2311d82dd6d8: Already exists 
+1bba15468fcc: Already exists 
+62d562df65b5: Pull complete 
+364bc44563a1: Pull complete 
+5444f6e0d4f1: Pull complete 
+c54176f7c0ef: Pull complete 
+b0581931af32: Pull complete 
+8e6b2bd1e51d: Pull complete 
+4f4fb700ef54: Pull complete 
+387e6d0853b2: Pull complete 
+6413e37a99fd: Pull complete 
+88cabecab9c9: Pull complete 
+d40a38ce3086: Pull complete 
+9023d5deab17: Pull complete 
+Digest: sha256:212efa8e3805f6c47a66be2078b8ed38d9a0e1d64d1a5803276a7a9e54c8933c
+Status: Downloaded newer image for docker/model-runner:latest-cuda
+Successfully pulled docker/model-runner:latest-cuda
+Starting model runner container docker-model-runner...
+MODEL NAME  PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID  CREATED  CONTEXT  SIZE</pre>
+    </div>
+    <br/>
+</pre>
+    </div>
+    <br/>
+    <div id="para-div">
+      <p>As is evident from the Output.4 (or Output.5) above, there are no AI models currently downloaded on the local host.</p>
     </div>
     <div id="para-div">
       <p>Browse the currently available AI models in the <a href="https://hub.docker.com/catalogs/models" target="_blank"><span class
@@ -284,7 +318,7 @@ MODEL NAME  PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID  CREATED  CONTEXT  
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.5</h4>
+      <h4>Output.6</h4>
       <pre>c2b52d60a238: Pull complete [==================================================>]  8.344kB/8.344kB
 96c32662a056: Pull complete [==================================================>]  8.919GB/8.919GB
 Model pulled successfully</pre>
@@ -303,7 +337,7 @@ Model pulled successfully</pre>
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.6</h4>
+      <h4>Output.7</h4>
       <pre>MODEL NAME      PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID      CREATED       CONTEXT  SIZE      
 gemma3n:2B-F16  4.46 B      F16           gemma3n       f45ebd23a7bf  7 months ago           8.30 GiB </pre>
     </div>
@@ -321,7 +355,7 @@ gemma3n:2B-F16  4.46 B      F16           gemma3n       f45ebd23a7bf  7 months a
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.7</h4>
+      <h4>Output.8</h4>
       <pre>&gt; Send a message (/? for help)</pre>
     </div>
     <br/>
@@ -338,7 +372,7 @@ gemma3n:2B-F16  4.46 B      F16           gemma3n       f45ebd23a7bf  7 months a
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.8</h4>
+      <h4>Output.9</h4>
       <pre>Okay, here are the top three consumer GPUs as of late 2023/early 2024, considering performance, price, and availability.  It's important to note that the "best" GPU depends on your specific needs (gaming resolution, desired frame rates, budget).  This is a general ranking:
 
 1.  **NVIDIA GeForce RTX 4090:** 
@@ -380,6 +414,24 @@ I hope this helps! Let me know if you have any other questions.</pre>
         the Gemma-3n 2B LLM model.</p>
     </div>
     <div id="para-div">
+      <p>To list all the running <span class="bold">Docker Model</span>s, execute the following command in a new terminal window:</p>
+    </div>
+    <br/>
+    <div id="cmd-div">
+      <p>$ docker model ps</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <p>The following would be a typical output:</p>
+    </div>
+    <br/>
+    <div id="out-div">
+      <h4>Output.10</h4>
+      <pre>MODEL NAME      BACKEND    MODE        LAST USED       
+gemma3n:2B-F16  llama.cpp  completion  46 seconds ago</pre>
+    </div>
+    <br/>
+    <div id="para-div">
       <p>To list all the running <span class="bold">Docker Container</span>s, execute the following command in a new terminal window:</p>
     </div>
     <br/>
@@ -392,13 +444,13 @@ I hope this helps! Let me know if you have any other questions.</pre>
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.9</h4>
+      <h4>Output.11</h4>
       <pre>CONTAINER ID   IMAGE                        COMMAND               CREATED         STATUS         PORTS                                                     NAMES
 bff97003bde0   docker/model-runner:latest   "/app/model-runner"   7 minutes ago   Up 7 minutes   127.0.0.1:12434->12434/tcp, 172.17.0.1:12434->12434/tcp   docker-model-runner</pre>
     </div>
     <br/>
     <div id="para-div">
-      <p>As can be inferred from the Output.9 above, the LLM model is accessible via the network on the host <span class="bold">
+      <p>As can be inferred from the Output.11 above, the LLM model is accessible via the network on the host <span class="bold">
         localhost</span> at port <span class="bold">12434</span>.</p>
     </div>
     <div id="para-div">
@@ -415,12 +467,12 @@ bff97003bde0   docker/model-runner:latest   "/app/model-runner"   7 minutes ago 
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.10</h4>
+      <h4>Output.12</h4>
       <pre>[
   {
     "id": "sha256:f45ebd23a7bfc435bfbdac2f39fc1e798644ba40c8dd4dadcad284fd99230d32",
     "tags": [
-      "ai/gemma3n:2B-F16"
+      "docker.io/ai/gemma3n:2B-F16"
     ],
     "created": 1751014610,
     "config": {
@@ -492,12 +544,12 @@ bff97003bde0   docker/model-runner:latest   "/app/model-runner"   7 minutes ago 
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.11</h4>
+      <h4>Output.13</h4>
       <pre>{
   "object": "list",
   "data": [
     {
-      "id": "ai/gemma3n:2B-F16",
+      "id": "docker.io/ai/gemma3n:2B-F16",
       "object": "model",
       "created": 1751014610,
       "owned_by": "docker"
@@ -511,7 +563,7 @@ bff97003bde0   docker/model-runner:latest   "/app/model-runner"   7 minutes ago 
     </div>
     <br/>
     <div id="cmd-div">
-      <p>$ curl -s http://localhost:12434/engines/llama.cpp/v1/chat/completions -H 'Content-Type: application/json'
+      <p>$ curl -s http://localhost:12434/engines/llama.cpp/v1/chat/completions -H 'Content-Type: application/json' \
     -d '{
         "model": "ai/gemma3n:2B-F16",
         "messages": [
@@ -532,7 +584,7 @@ bff97003bde0   docker/model-runner:latest   "/app/model-runner"   7 minutes ago 
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.12</h4>
+      <h4>Output.14</h4>
       <pre>{
   "choices": [
     {
@@ -540,29 +592,30 @@ bff97003bde0   docker/model-runner:latest   "/app/model-runner"   7 minutes ago 
       "index": 0,
       "message": {
         "role": "assistant",
-        "content": "Okay, here are the top 3 consumer CPUs as of late 2024, based on a combination of performance, price, and popularity.  Keep in mind that the \"best\" CPU depends heavily on individual needs and budget, but these are consistently highly-rated:\n\n*   **AMD Ryzen 7 8700X:**  A strong all-around performer, the 8700X offers excellent gaming performance and is capable of handling demanding productivity tasks. It's a good balance of price and performance.\n\n*   **Intel Core i7-14700K:** This is a top-tier CPU known for its exceptional gaming and content creation capabilities. It offers a significant performance boost over previous generations and is a favorite among enthusiasts.\n\n*   **AMD Ryzen 5 7600X:**  A great value option, the 7600X provides excellent performance for gaming and general use without breaking the bank. It's a solid choice for those looking for a capable CPU without spending a fortune.\n\n\n\n**Important Considerations:**\n\n*   **Motherboard Compatibility:**  You'll need to ensure the CPU you choose is compatible with your motherboard (socket type).\n*   **Cooling:** High-performance CPUs often require a good cooler (air cooler or liquid cooler).\n*   **Budget:** CPU prices fluctuate, so it's a good idea to compare prices from different retailers.\n*   **Specific Use Case:**  Consider what you'll primarily use the CPU for (gaming, video editing, general use) to determine which model is the best fit.\n\n\n\nI hope this helps! Let me know if you have any other questions.\n\n\n\n"
+        "content": "Okay, here are the top 3 consumer CPUs as of late 2024, based on performance, value, and popularity.  It's worth noting that \"top\" can vary slightly depending on the specific use case (gaming, productivity, etc.), but these are consistently highly regarded:\n\n*   **Intel Core i7-14700K:** This is often considered the top-performing consumer CPU overall. It offers excellent gaming performance and strong productivity capabilities. It's a powerful choice for enthusiasts and gamers.\n\n*   **AMD Ryzen 7 7700X:**  A strong competitor to the i7-14700K, the Ryzen 7 7700X delivers excellent performance in both gaming and content creation. It's known for its efficiency and great value.\n\n*   **Intel Core i5-14600K:** A great balance of price and performance, the i5-14600K is an excellent choice for gamers and everyday users. It provides a significant performance boost over previous generations and is a popular option for those building a mid-range system.\n\n\n\n**Important Considerations:**\n\n*   **Price:** Prices fluctuate, so check current pricing from retailers.\n*   **Motherboard Compatibility:**  Make sure the CPU you choose is compatible with your motherboard (e.g., Intel vs. AMD, socket type).\n*   **Cooling:**  High-performance CPUs like these require good cooling solutions (air coolers or liquid coolers).\n\n\n\nI hope this helps!\n\n\n\n**Disclaimer:** *CPU performance can vary depending on the specific workload and system configuration.*\n\n\n\n"
       }
     }
   ],
-  "created": 1751745374,
-  "model": "ai/gemma3n:2B-F16",
-  "system_fingerprint": "b1-9c98bab",
+  "created": 1769985106,
+  "model": "model.gguf",
+  "system_fingerprint": "b1-34ce48d",
   "object": "chat.completion",
   "usage": {
-    "completion_tokens": 354,
+    "completion_tokens": 344,
     "prompt_tokens": 29,
-    "total_tokens": 383
+    "total_tokens": 373
   },
-  "id": "chatcmpl-r51ciTbEaKgMeB8xU5zhEMI8C6bewHU9",
+  "id": "chatcmpl-oHvJiiA8Uvni9qxIgbNvL3MQKu4uKmec",
   "timings": {
-    "prompt_n": 1,
-    "prompt_ms": 133.597,
-    "prompt_per_token_ms": 133.597,
-    "prompt_per_second": 7.485198020913643,
-    "predicted_n": 354,
-    "predicted_ms": 46981.2,
-    "predicted_per_token_ms": 132.71525423728812,
-    "predicted_per_second": 7.534928865163088
+    "cache_n": 4,
+    "prompt_n": 25,
+    "prompt_ms": 15.26,
+    "prompt_per_token_ms": 0.6103999999999999,
+    "prompt_per_second": 1638.2699868938403,
+    "predicted_n": 344,
+    "predicted_ms": 7206.789,
+    "predicted_per_token_ms": 20.949968023255813,
+    "predicted_per_second": 47.73276975363092
   }
 }</pre>
     </div>
@@ -581,7 +634,7 @@ bff97003bde0   docker/model-runner:latest   "/app/model-runner"   7 minutes ago 
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.13</h4>
+      <h4>Output.15</h4>
       <pre>Untagged: docker.io/ai/gemma3n:2B-F16
 Deleted: sha256:f45ebd23a7bfc435bfbdac2f39fc1e798644ba40c8dd4dadcad284fd99230d32</pre>
     </div>
@@ -599,7 +652,7 @@ Deleted: sha256:f45ebd23a7bfc435bfbdac2f39fc1e798644ba40c8dd4dadcad284fd99230d32
     </div>
     <br/>
     <div id="out-div">
-      <h4>Output.14</h4>
+      <h4>Output.16</h4>
       <pre>MODEL NAME  PARAMETERS  QUANTIZATION  ARCHITECTURE  MODEL ID  CREATED  SIZE</pre>
     </div>
     <br/>
