--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>02/07/2026 | <a target="_blank" href="https://polarsparc.github.io/Claude/Claude-Adventures-1.html"><span class="bold">Claude
+            Code Adventures - Part 1</span></a></p>
+        </li>
+        <li>
           <p>02/01/2026 | <a target="_blank" href="https://polarsparc.github.io/Docker/DockerModel.html"><span class="bold">Quick Bytes
             on Docker Model Runner</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>01/02/2026 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-2.html"><span class="bold">DHT22 Sensor
             with ESP32 - Setup and Test</span></a></p>
-        </li>
-        <li>
-          <p>01/01/2026 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain4J.html"><span class="bold">Hands-on
-            LangChain4J</span></a></p>
         </li>
       </ul>
     </div>
@@ -244,6 +244,18 @@
         <li>
           <p>11/08/2024 | <a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-1.html"><span class="bold">Hands-on Primer
             on Rasa - Part 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Claude</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p>02/07/2026 | <a target="_blank" href="https://polarsparc.github.io/Claude/Claude-Adventures-1.html"><span class="bold">Claude
+            Code Adventures - Part 1</span></a></p>
         </li>
       </ul>
     </div>
