Claude Part 2, Claude Part 1 fix, Index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>02/16/2026 | <a target="_blank" href="https://polarsparc.github.io/Claude/Claude-Adventures-2.html"><span class="bold">Claude
+            Code Adventures - Part 2</span></a></p>
+        </li>
+        <li>
           <p>02/07/2026 | <a target="_blank" href="https://polarsparc.github.io/Claude/Claude-Adventures-1.html"><span class="bold">Claude
             Code Adventures - Part 1</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>01/10/2026 | <a target="_blank" href="https://polarsparc.github.io/MCP/McpSpringAI.html"><span class="bold">Hands-on MCP
             using Spring AI</span></a></p>
-        </li>
-        <li>
-          <p>01/02/2026 | <a target="_blank" href="https://polarsparc.github.io/IoT/ESP32-2.html"><span class="bold">DHT22 Sensor
-            with ESP32 - Setup and Test</span></a></p>
         </li>
       </ul>
     </div>
@@ -253,6 +253,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>02/16/2026 | <a target="_blank" href="https://polarsparc.github.io/Claude/Claude-Adventures-2.html"><span class="bold">Claude
+            Code Adventures - Part 2</span></a></p>
+        </li>
         <li>
           <p>02/07/2026 | <a target="_blank" href="https://polarsparc.github.io/Claude/Claude-Adventures-1.html"><span class="bold">Claude
             Code Adventures - Part 1</span></a></p>
